# Qt

./: readme.md
Calc_QML/: README.md
TaskManager/: readme.md
TaskManager/TaskManager/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  TaskDialog.cpp  TaskDialog.h  TaskDialog.ui  deadlinechecker.cpp  deadlinechecker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
